# ibkr-ibind-rest-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  WORKFLOW_SETUP.md  api.py  auth.py  cleanup.sh  config.example.json  config.py  docker-compose.yml  generate_key.py  generate_test_api_key.py  main.py  mkdocs.yml  paper_trading.example.json  pyproject.toml  render.yaml  requirements-minimal.txt  requirements.txt  run_server.py  service.py  test_workflow_trigger.py  utils.py  verify_github_token.py
.github/workflows/: comprehensive-trading.yml  deploy-pages.yml  trading-trigger.yml
backend/: __init__.py  account_operations.py  api.py  api_recurring.py  application.py  auth.py  cli.py  comprehensive_api.py  config.py  data_export.py  discord_notifier.py  exceptions.py  health_monitor.py  market_data.py  models.py  openapi_docs.py  recurring_orders.py  sequential_logger.py  sheets_integration.py  trading_operations.py  utils.py  validators.py
docs/: COMPREHENSIVE_SYSTEM_ANALYSIS.md  GSHEETS_SETUP_GUIDE.md  INDEX.md  REPOSITORY_STRUCTURE.md  SET_AND_FORGET_GUIDE.md  SYSTEM_OVERVIEW.md  api_endpoint_analysis.md  api_reference.md  frontend_guide.md  index.md
docs/explanations/: index.md
docs/how-to/: flask-cli-usage.md  (+3 more)
examples/: README.md
frontend/: README.md  astro.config.mjs  package-lock.json  package.json  streamlit_app.py  tsconfig.json
scripts/: cancel_duplicates.py  rebalance_with_limit.py  rebalance_with_market.py  view_open_orders.py
service/: __init__.py  recurring_orders_service.py  service_manager.py
site/: 404.html  index.html  sitemap.xml
src/: __init__.py  api.py  application.py  auth.py  config.py  utils.py
tests/: test_recurring_system.py  test_sheets_integration.py
tools/: __init__.py
utils/: __init__.py  generate_key.py
(+26 files in other folders)
