[project]
name = "ibind-rest-api"
version = "0.1.0"
description = "Minimal IBKR Trading REST API for Local Automation"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Parth Chandak", email = "parthchandak02@gmail.com"}
]
license = {text = "MIT"}
keywords = ["trading", "ibkr", "automation", "flask", "interactive-brokers", "cron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "apscheduler>=3.11.0",
    "click>=8.1.0",
    "flask==3.0.3",
    "gspread>=6.2.0",
    "google-auth>=2.30.0",
    "ibind[oauth]==0.1.18",
    "psutil>=6.1.0",
    "pycryptodome==3.19.1",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
ibind-server = "run_server:main"


[project.urls]
Homepage = "https://github.com/parthchandak02/ibkr-ibind-rest-api"
Repository = "https://github.com/parthchandak02/ibkr-ibind-rest-api"
Issues = "https://github.com/parthchandak02/ibkr-ibind-rest-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
include = [
    "run_server.py",
    "config.json",
    "*.md",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "S", "C4"]
ignore = ["E501", "S101"]  # Line too long, Use of assert

[tool.black]
line-length = 88
target-version = ['py313']
